# DataBase_analysis

./: Zdarova.py  pyproject.toml
src/: database.py  dbupdater.py  main.py  models.py  schemas.py
src/queries/: core.py  orm.py
