[tool.poetry]
name = "sql"
version = "0.1.0"
description = ""
authors = ["Uchquduq inc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.32"
pydantic = "^2.9.1"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
